hphp/hack/test/typecheck/parse_float_with_underscore_bad4.php.exp
File "parse_float_with_underscore_bad4.php", line 5, characters 21-22:
1e is out of the range of 64-bit float values (Parsing[1002])
File "parse_float_with_underscore_bad4.php", line 5, characters 21-22:
A floating point literal with an exponent needs at least one digit in the exponent. (Parsing[1002])
