hphp/hack/test/typecheck/parse_float_with_underscore_bad4.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class BigNumbersRUs {
  const float fp4 = 1e_1;
}
